# gnil-fm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
assets/brand/: manifest.json
crates/gnil-app/: Cargo.toml
crates/gnil-app/src/: action_menu.rs  empty_space_menu.rs  lib.rs  main.rs  path_input.rs  picker.rs  pointer_interaction.rs  portal_protocol.rs  portal_service.rs  text_input.rs  theme_runtime.rs
crates/gnil-clipboard/: Cargo.toml
crates/gnil-clipboard/src/: lib.rs
crates/gnil-core/: Cargo.toml
crates/gnil-core/src/: action.rs  entry.rs  job.rs  lib.rs  operation.rs  selection.rs  settings.rs  tab.rs  theme.rs
crates/gnil-fs/: Cargo.toml
crates/gnil-fs/src/: archive.rs  devices.rs  git.rs  lib.rs  operation.rs  scan.rs  scheduler.rs  search.rs  trash_view.rs  watcher.rs
crates/gnil-preview/: Cargo.toml
crates/gnil-preview/src/: lib.rs
docs/: ARCHITECTURE.md  ASSET-DIRECTION.md
packaging/: gnil-fm.desktop  gnilfm.portal  io.github.gnil_fm.Gnil.metainfo.xml  org.freedesktop.impl.portal.desktop.gnilfm.service.in  portable-launcher.sh  xdg-desktop-portal-gnilfm.service.in
themes/: forest-night.json
