[workspace]
members = [
    "crates/gnil-app",
    "crates/gnil-clipboard",
    "crates/gnil-core",
    "crates/gnil-fs",
    "crates/gnil-preview",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["gnil-fm contributors"]

[workspace.dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
gpui = { version = "=0.2.2", default-features = false, features = ["wayland"] }
ignore = "0.4.23"
libarchive2 = "0.2.1"
image = { version = "0.25.6", default-features = false, features = ["avif", "bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
mime_guess = "2.0.5"
notify = "8.0.0"
nix = { version = "0.31.3", features = ["fs"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
unicode-segmentation = "1.12.0"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.22"
trash = "5.2.2"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
zbus = "5.18.0"
flate2 = "1.1.2"
bzip2 = "0.6.1"
xz2 = "0.1.7"
zstd = "0.13.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
