[package]
name = "gnil-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
crossbeam-channel.workspace = true
gnil-core = { path = "../gnil-core" }
ignore.workspace = true
libarchive2.workspace = true
mime_guess.workspace = true
notify.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
trash.workspace = true
uuid.workspace = true
walkdir.workspace = true
zbus.workspace = true
flate2.workspace = true
bzip2.workspace = true
xz2.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
